--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,5 +5,6 @@
         "removeComments": true,
         "esModuleInterop": true, // Dùng Import thay require
         "outDir": "dist",
+        "skipLibCheck": true
     }
 }
