--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.ts",
-    "build":"tsc",
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -13,8 +13,11 @@
   "dependencies": {
     "body-parser": "^1.20.3",
     "cloudinary": "^2.5.1",
+    "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-session": "^1.18.1",
+    "flash": "^1.1.0",
     "method-override": "^3.0.0",
     "mongoose": "^8.9.2",
     "mongoose-slug-updater": "^3.3.0",
